refactor: :art: Moved game logic from controllers to services